HAWB and booking confirmation report